# pktanon

./: .gitignore  LICENSE.txt  Makefile.am  README.md  configure.ac  include.mk
include/: PktAnon.h  PktAnonC.h
libpktanon/: AnonFactory.cpp  AnonFactory.h  Checksum.cpp  Checksum.h  ConfigSAXParser.cpp  ConfigSAXParser.h  HardCodedConfig.cpp  HardCodedConfig.h  Makefile.am  PHF.h  PHT.h  Params.h  PktAnon.cpp  PktAnonC.cpp  PktAnonConfig.cpp  PktAnonConfig.h  ProtocolUtils.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h  debug.h  log.h  optmacros.h
libpktanon/anonprimitives/: AnonBroadcastHandler.cpp  AnonBroadcastHandler.h  AnonBytewise.cpp  AnonBytewise.h  AnonBytewiseHashHmacSha1.cpp  AnonBytewiseHashHmacSha1.h  AnonBytewiseHashSha1.cpp  AnonBytewiseHashSha1.h  AnonConstOverwrite.cpp  AnonConstOverwrite.h  AnonConstOverwriteRange.cpp  AnonConstOverwriteRange.h  AnonContinuousChar.cpp  AnonContinuousChar.h  AnonCryptoPan.cpp  AnonCryptoPan.h  AnonHashHmacSha1.h  AnonHashHmacSha1_Nettle.cpp  AnonHashSha1.h  AnonHashSha1_Nettle.cpp  AnonHashSha256.h  AnonHashSha256_Nettle.cpp  AnonIdentity.cpp  AnonIdentity.h  AnonKnownEthertypeHandler.cpp  AnonKnownEthertypeHandler.h  AnonKnownProtocolHandler.cpp  AnonKnownProtocolHandler.h  AnonPrimitive.cpp  AnonPrimitive.h  AnonRandomize.cpp  AnonRandomize.h  AnonShorten.cpp  AnonShorten.h  AnonShuffle.cpp  AnonShuffle.h  AnonWhitenoise.cpp  AnonWhitenoise.h
libpktanon/anonprimitives/cryptopan/: panonymizer.cpp  panonymizer.h  rijndael.cpp  rijndael.h
libpktanon/transformations/: Addresses.h  ArpPacketTransformation.cpp  ArpPacketTransformation.h  DefaultTransformationsConfigurator.cpp  DefaultTransformationsConfigurator.h  ErrorCodes.cpp  ErrorCodes.h  EthernetPacketTransformation.cpp  EthernetPacketTransformation.h  ICMPv6PacketTransformation.cpp  ICMPv6PacketTransformation.h  IPv4PacketTransformation.cpp  IPv4PacketTransformation.h  IPv6PacketTransformation.cpp  IPv6PacketTransformation.h  IcmpPacketTransformation.cpp  IcmpPacketTransformation.h  LinuxCookedCaptureTransformation.cpp  LinuxCookedCaptureTransformation.h  PayloadTransformation.cpp  PayloadTransformation.h  PseudoheaderAwareTransformation.h  TcpPacketTransformation.cpp  TcpPacketTransformation.h  Transformation.cpp  Transformation.h  TransformationsConfigurator.cpp  TransformationsConfigurator.h  UdpLitePacketConfigurator.cpp  UdpLitePacketConfigurator.h  UdpLitePacketTransformation.cpp  UdpLitePacketTransformation.h  UdpPacketTransformation.cpp  UdpPacketTransformation.h  VlanTagTransformation.cpp  VlanTagTransformation.h
m4/: ax_cxx_compile_stdcxx_11.m4  ax_lib_pcap.m4
profiles/: profile-identity.xml  profile.xml  sample.pcap
src/: IstreamRecordsHandler.cpp  IstreamRecordsHandler.h  LibpcapDumpOutput.cpp  LibpcapDumpOutput.h  LibpcapInjectOutput.cpp  LibpcapInjectOutput.h  LibpcapOutputSource.h  LibpcapRecordsHandler.cpp  LibpcapRecordsHandler.h  Main.cpp  Makefile.am  OstreamOutput.cpp  OstreamOutput.h  OutputSource.h  PcapHeaders.h  PcapUtils.h  PktAnonRuntime.cpp  PktAnonRuntime.h  RawSocketRecordsHandler.cpp  RawSocketRecordsHandler.h  RecordsHandler.h  RuntimeConfig.cpp  RuntimeConfig.h  RuntimeFactory.cpp  RuntimeFactory.h  SocketOutput.cpp  SocketOutput.h  Stats.h  Utils.h  chronometer.h  console_utils.cpp  console_utils.h  globals.h  includes.h
tests/: Makefile.am  site_extra.exp
tests/anonprimitives/: AnonTester.cpp  AnonTester.h  basictest.exp  chainstest.exp
tests/config/: unix.exp
tests/errors/: bad_arp.pcap  bad_ethernet.pcap  bad_ip.pcap  bad_tcp.pcap  bad_udp.pcap  eth_ip6.xml  eth_ip6_icmp6.xml  eth_ip6_tcp_udp.xml  test_bad_arp.exp  test_bad_ethernet.exp  test_bad_ip.exp  test_bad_udp.exp  test_ip6_hop_by_hop_opt.exp  trace_hop_by_hop_opt.pcap
tests/lib/: anonprimitives.exp  anontestlib.exp  errorstestlib.exp  pktanon-runtime.exp  runtimetestlib.exp  transformations.exp  transftestlib.exp
tests/pktanon-runtime/: console.exp  gzip_pipe.sh  iostreams_tshark_input.exp.todo  istream__ostream.exp  istream__socket_output_ip6_tcp.exp  istream__socket_output_ip6_udp.exp  istream__socket_output_ip_tcp.exp  istream_gzip_stdin__ostream.exp  libpcap_dump.exp.todo  libpcap_dump__dump.exp  libpcap_dump__inject.exp  libpcap_live__dump.exp  libpcap_live__inject.exp  libpcap_live__socket_output_udp.exp  libpcap_live_filter.exp.todo  profile.xml  profile_mix.xml  raw_socket__ostream.exp  trace.pcap
tests/transformations/arp/: arp.exp  arp.pcap  arp_iden.exp  iden.xml  mix.xml
tests/transformations/ethernet/: ethernet.exp  ethernet.pcap  ethernet_iden.exp  iden.xml  mix.xml
tests/transformations/icmp/: icmp.exp  icmp_echo_repl.pcap  icmp_echo_req.pcap  icmp_iden.exp  iden.xml  mix.xml
tests/transformations/icmp6/: icmp6_na.pcap  icmp6_ns.pcap  icmp_na.exp  icmp_na_iden.exp  icmp_ns.exp  icmp_ns_iden.exp  iden_ns.xml  mix_na.xml  mix_ns.xml
tests/transformations/ip/: iden.xml  ip.exp  ip.pcap  ip_iden.exp  mix.xml
tests/transformations/ip6/: ip6.exp  ip6.pcap  ip6_iden.exp  ip6_tcp.pcap  ip6_tcp_checksum.exp  ip6_udp.pcap  ip6_udp_checksum.exp  mix.xml  tcp_checksum.xml  udp_checksum.xml
tests/transformations/tcp/: iden.xml  mix.xml  tcp.exp  tcp.pcap  tcp_ack.pcap  tcp_iden.exp  tcp_syn_ack.pcap
tests/transformations/udp/: iden.xml  mix.xml  udp.exp  udp.pcap  udp_iden.exp
